include_directories(${CMAKE_SOURCE_DIR}/include)

set(TEST_DIR ${CMAKE_SOURCE_DIR}/tests)

# add_executable(test_graphics ${TEST_DIR}/test_graphics.cpp)
# target_link_libraries(test_graphics lhc_gl)
# set_target_properties( test_graphics
#     PROPERTIES
#     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/build"
# )
